# simplex

./: .gitignore  _CoqProject  dune-project  opam_versions.txt  simplex-cat.opam  simplex-cat.opam.template  todo.typ
src/: Basics.v  Bicat.v  Category.v  Datatypes.v  Eq.v  Graph.v  Nat.v  NatRel.v  NatTrans.v  OneBicat.v  Path.v  PreOrder.v  Pseudofunctor.v  README.md  Relations.v  Rewriting.v  SPropEquiv.v  Tactics.v  ThreeGraph.v  TwoGraph.v  UniversalArrow.v  basics_v1.v  dune  test.v
src/Basics/: Axioms.v  Basics.v  Classes.v  Datatypes.v  Datatypes_core.v  Eq.v  Induction.v  List.v  Nat.v  Relations.v  SEq.v
src/Bicategories/: Bicat.v  Displayed.v  OneBicat.v  Pseudofunctor.v  TwoCat.v  UniversalArrow.v
src/Category/: Bifunctor.v  CategoricalProduct.v  Category.v  Functor.v  FunctorCat.v  HoTTCategory.v  Monoidal.v  NatTrans.v  Presheaf.v  Prod.v  ProdCat.v  TwoOneCat.v  Type.v
src/Graph/: Graph.v  GraphCat.v  Path.v  ThreeGraph.v  TwoGraph.v
src/PreOrder/: Category.v  Compose.v  Core.v  Instances.v
src/Tactics/: Transitivity.v
src/Type/: Type.v
tests/: Transitive.v
