(lang dune 3.13)

(using coq 0.8)

(name simplex-cat)

(generate_opam_files true)

(source (github patrick-nicodemus/simplex))
(authors
  "Patrick Nicodemus <gadget142@gmail.com>")
(maintainers
  "Patrick Nicodemus <gadget142@gmail.com>")
(license LGPL-2.0-or-later)  
(package
  (name simplex-cat)
  (synopsis "A library for category theory compatible with univalence and SProp")
  
  )